--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="index.ts"></script>
+    <script
+      type="module"
+      src="./les-fonctions/typer-les argument-et-les-valeur-retour.ts"
+    ></script>
   </head>
   <body>
     <h1>Hello World</h1>
