--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       type="module"
       src="./les-fonctions/typer-les argument-et-les-valeur-retour.ts"
     ></script>
+    <script type="module" src="./types-generique/introduction.ts"></script>
   </head>
   <body>
     <h1>Hello World</h1>
